# ZK2

./: LICENSE  README.md  config.py  mdproc.py  pyproject.toml  web.py  zk2.py  zk2.todo  zk_tool.py
Tests/: test_search.py
cli/: zk_tool.py
server/templates/: index.html
src/zk2/: ZKDatabase.py  ZKNote.py  __init__.py  config.py  definitions.py  zk2.py  zk_run.py  zk_server.py  zk_tool.py
src/zk2/server/: __init__.py  mdproc.py
src/zk2/server/static/: highlight.css  zk2.css  zk2.js
src/zk2/server/templates/: index.html  item.html  peek.html
static/: zk2.css  zk2.js
templates/: index.html  item.html  note.html  tags.html
